Fixed display bug on mobile

--- a/static/S4C_calendar.css
+++ b/static/S4C_calendar.css
@@ -36,6 +36,7 @@ body {
   cursor: pointer;
   margin-left: 10px;
   outline-style: solid;
+  margin: 10px;
 }
 #calHead option { color: #000; }
 #calYear {
